Backport to 1.12.2